// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a default tooltip 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c0:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7c81d9 0px 0px 0px 2px;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c0:hover {
  background-color: #efefef;
}

.c0:hover:active {
  background-color: #e3e3e3;
}

.c4 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c4[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  cursor: auto;
  z-index: 999;
}

.c2 {
  background: black;
  border-radius: 2px;
  color: white;
  opacity: 0.8;
  font-size: 0.8rem;
  font-weight: 400;
  padding: 0.25rem 0.5rem;
}

<button
  class="c0 c1"
  kind="default"
  type="button"
>
  Hover on me
  <div
    aria-hidden="true"
    class="c2 c3 c4 c5"
    data-placement="bottom"
    hidden=""
    role="tooltip"
  >
    Hello world!
  </div>
</button>
`;

exports[`renders correctly for a tooltip with a placement set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c0:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7c81d9 0px 0px 0px 2px;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c0:hover {
  background-color: #efefef;
}

.c0:hover:active {
  background-color: #e3e3e3;
}

.c4 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c4[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  cursor: auto;
  z-index: 999;
}

.c2 {
  background: black;
  border-radius: 2px;
  color: white;
  opacity: 0.8;
  font-size: 0.8rem;
  font-weight: 400;
  padding: 0.25rem 0.5rem;
}

<button
  class="c0 c1"
  kind="default"
  type="button"
>
  Hover on me
  <div
    aria-hidden="true"
    class="c2 c3 c4 c5"
    data-placement="right"
    hidden=""
    role="tooltip"
  >
    Hello world!
  </div>
</button>
`;
